fix minor rendering issue on Safari with dropdowns

--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,7 @@ footer {
         display: block;
     }
 }
+menu > li:has(> menu)::after {
+    content: "▾";
+    display: inline-block;
+}
